--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,16 @@
 /* Add CSS styling here */
+
+* {
+	margin: 10px;
+	padding: 10px;
+	border: 1px solid red;
+}	
+
+html {
+	width: 96vw;
+	height: 100vh;
+}
+
+#head-img {
+	background: url("https://picsum.photos/200/300");
+}
