--- a/style/index.css
+++ b/style/index.css
@@ -1,52 +1,88 @@
 /* Add CSS styling here */
 
 * {
-	border: 1px solid red;
+	/*border: 1px solid red;*/
+	/*-Debug Border-*/
 }	
 
 html {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
+	background-color: goldenrod;
+	margin: 10px 0;
 }
 
 header {
 	display: inline-flex;
-	background-color: coral;
-	width: 100%;
-}
-
-nav h1 {
-	display: inline-flex;
-	justify-content: flex-start;
 	width: 100%;
 }
 
 nav {
 	display: flex;
 	justify-content: flex-end;
-	align-items: baseline;
-	width: 100%;
+	align-items: center;
+	width: 98%;
+}
+
+nav h1 {
+	display: inline-flex;
+	justify-content: flex-start;
+	width: 70%;
+	font-size: 32px;
+	color: black;
+	text-shadow: 1px 1px white;
+	margin-left: 20px;
+}
+
+.link {
+	height: 5.70vh;
+	width: 6.6vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: dodgerblue;
+	border: 1px solid black;
+	border-radius: 10px;
+	margin-left: 5px;
 }
 
 #head-img {
-	background: url("https://picsum.photos/1400/400");
-	width: 80%;
-	height: 50vh;
-	margin: 0 10%;
+	background: url("https://picsum.photos/1000/400");
+	width: 62.5vw;
+	height: 50.7vh;
+	margin: 0 18.75%;
+	margin-top: 2%;
+	border: 1px solid black;
+	border-radius: 10px;
 }
 
 #image-txt {
+	width: 100%;
+	height: 50vh;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 }
 
 #image-txt h2 {
 	text-align: center;
 	width: 100%;
+	font-size: 64px;
+	margin: 0;
+	letter-spacing: 2px;
+	color: white;
+	text-shadow: 2px 2px black;
 }
 
 #main-link {
-
+	text-align: center;
+	margin: 2% 0;
+	padding: 1% 2%;
+	font-size: 24px;
+	background-color: dodgerblue;
+	border: 1px solid black;
+	border-radius: 10px;
 }
 
 #content {
@@ -55,24 +91,44 @@ nav {
 	justify-content: space-between;
 	align-content: space-between;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+	padding-bottom: 2%;
 }
 
 .image {
-	width: 400px;
-	height: 300px;
-	margin: 5% 1%;
+	width: 25vw;
+	height: 38.02vh;
+	margin-top: 5%;
 	background: url("https://picsum.photos/400/300");
+	border: 1px solid black;
+	border-radius: 10px;
+}
+
+.text {
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	width: 25vw;
+	height: 41.82vh;
+	font-size: 24px;
 }
 
 footer {
 	display: flex;
 	justify-content: center;
-	width: 100%
+	width: 100%;
 }
 
 #contact-me {
 	margin: 4% 0;
-	padding: 2%;
+	padding: 1% 2%;
 	font-size: 24px;
+	background-color: dodgerblue;
+	border: 1px solid black;
+	border-radius: 10px;
+}
+
+a {
+	text-decoration: none;
+	color: black;
 }
