--- a/style/index.css
+++ b/style/index.css
@@ -28,7 +28,7 @@ nav h1 {
 	display: inline-flex;
 	justify-content: flex-start;
 	width: 70%;
-	font-size: 32px;
+	font-size: 2em;
 	color: black;
 	text-shadow: 1px 1px white;
 	margin-left: 20px;
@@ -68,7 +68,7 @@ nav h1 {
 #image-txt h2 {
 	text-align: center;
 	width: 100%;
-	font-size: 64px;
+	font-size: 4em;
 	margin: 0;
 	letter-spacing: 2px;
 	color: white;
@@ -79,7 +79,7 @@ nav h1 {
 	text-align: center;
 	margin: 2% 0;
 	padding: 1% 2%;
-	font-size: 24px;
+	font-size: 1.5em;
 	background-color: dodgerblue;
 	border: 1px solid black;
 	border-radius: 10px;
@@ -110,7 +110,7 @@ nav h1 {
 	align-items: flex-end;
 	width: 25vw;
 	height: 41.82vh;
-	font-size: 24px;
+	font-size: 1.5em;
 }
 
 footer {
@@ -122,7 +122,7 @@ footer {
 #contact-me {
 	margin: 4% 0;
 	padding: 1% 2%;
-	font-size: 24px;
+	font-size: 1.5em;
 	background-color: dodgerblue;
 	border: 1px solid black;
 	border-radius: 10px;
