added in empty media queries for 800px and 500px to set up for responsive css styling

--- a/style/index.css
+++ b/style/index.css
@@ -138,3 +138,17 @@ a {
 	text-decoration: none;
 	color: black;
 }
+
+/* ---Responsive Styling---*/
+
+/* ---MediaQuery for 800px Start---*/
+@media (max-width: 800px) {
+
+}
+/* ---MediaQuery for 800px End---*/
+
+/* ---MediaQuery for 500px Start---*/
+@media (max-width: 500px) {
+	
+}
+/* ---MediaQuery for 500px End---*/
