--- a/style/index.css
+++ b/style/index.css
@@ -143,7 +143,80 @@ a {
 
 /* ---MediaQuery for 800px Start---*/
 @media (max-width: 800px) {
+	* {
+		/* ---Debug Border--- */
+/* 		border: 1px solid red; */
+	}
+	
+	header nav {
+		flex-flow: column;
+		width: 100%;
+	}
+	
+	header nav h1 {
+		justify-content: center;
+		font-size: 4em;
+		margin: 3% 0;
+	}
+	
+	.link {
+		display: inline-flex;
+		width: 30%;
+		height: 60px;
+		font-size: 1.5em;
+	}
+	
+	#head-img {
+		width: 90%;
+		height: 330px;
+		margin: 5% auto;
+	}
 
+	#image-txt h2 {
+		font-size: 3em;
+	}
+
+	#main-link {
+		display: inline-flex;
+		width: 30%;
+		height: 60px;
+		font-size: 2em;
+		justify-content: center;
+		align-items: center;
+	}
+	
+	#content {
+		width: 100%;
+		height: 1000px;
+		justify-content: space-evenly;
+		align-content: space-evenly;
+	}
+	
+	.image {
+		width: 30vw;
+		height: 35vh;
+		margin: 5% 5%;
+	}
+
+	
+	.text {
+		width: 30vw;
+		height: 41vh;
+	}
+	
+	.text a {
+		font-size: 1.25em;
+	}
+	
+	#contact-me {
+		display: inline-flex;
+		width: 30%;
+		height: 60px;
+		font-size: 2em;
+		justify-content: center;
+		align-items: center;
+	}
+	
 }
 /* ---MediaQuery for 800px End---*/
 
